--- a/DL_CNN.ipynb
+++ b/DL_CNN.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "qO6JYp0PLfxr"
       },
@@ -35,23 +35,33 @@
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
         "from sklearn.metrics import accuracy_score,classification_report\n",
-        "from tensorflow.keras.preprocessing.image import load_img,img_to_array"
+        "from tensorflow.keras.preprocessing.image import load_img,img_to_array\n",
+        "\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout\n",
+        "from tensorflow.keras.utils import to_categorical\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "from imblearn.over_sampling import SMOTE"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FfUBKu7EL3_6",
-        "outputId": "dafec8e0-9323-4bd1-9bde-46093cb2f5ea"
+        "outputId": "490a227c-eb75-47b4-8eb1-170bd888a963"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Mounted at /content/drive\n"
           ]
@@ -64,22 +74,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "kGbyb2FcNvvd"
       },
       "outputs": [],
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "from sklearn.preprocessing import MinMaxScaler\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout\n",
-        "from tensorflow.keras.utils import to_categorical\n",
-        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-        "from imblearn.over_sampling import SMOTE\n",
-        "\n",
         "# Load your dataset\n",
         "data_path = '/content/drive/MyDrive/ransomware_analysis_files/gan_for_synthetic/balanced_oversampled_very_noisy_extended_5k.csv'\n",
         "dataset = pd.read_csv(data_path)\n",
@@ -92,6 +92,15 @@
         "X = dataset.drop(['Tag_y', 'Tag_x','filename', 'cryptographic_usage_encryption_algorithms','complexity_metrics_function_count', 'data_flow_collections_usage', 'hardcoded_urls', 'obfuscation_techniques_variable_name_length', 'unique_suspicious_strings'], axis=1)\n",
         "y = dataset['Tag_y']\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "method 1"
+      ],
+      "metadata": {
+        "id": "sQPHecOYzKiY"
+      }
     },
     {
       "cell_type": "code",
@@ -120,39 +129,178 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "method 2"
+      ],
+      "metadata": {
+        "id": "yf0ETZl5zMKQ"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from PIL import Image\n",
+        "\n",
+        "# Function to convert CSV to image array directly in memory\n",
+        "def csv_to_image_array(data, dtype=None, img_dim=(128,128), img_type='RGB'):\n",
+        "    images = []\n",
+        "    no_of_features = data.shape[1]\n",
+        "    sqrt_of_no_of_features = int(np.sqrt(no_of_features))\n",
+        "    if np.sqrt(no_of_features) > sqrt_of_no_of_features:\n",
+        "        sqrt_of_no_of_features += 1\n",
+        "\n",
+        "    for index, row in data.iterrows():\n",
+        "        pixels = np.resize(row.values, (sqrt_of_no_of_features**2)).reshape(sqrt_of_no_of_features, sqrt_of_no_of_features)\n",
+        "        image = Image.fromarray(pixels.astype(np.uint8))\n",
+        "        if img_type != 'Gray':\n",
+        "            image = image.convert(img_type)\n",
+        "        image = image.resize(img_dim, Image.Resampling.NEAREST)\n",
+        "        images.append(np.array(image))\n",
+        "    return np.array(images)\n",
+        "\n",
+        "# Load your dataset\n",
+        "data_path = '/content/drive/MyDrive/ransomware_analysis_files/gan_for_synthetic/balanced_oversampled_very_noisy_extended_5k.csv'\n",
+        "dataset = pd.read_csv(data_path)\n",
+        "\n",
+        "# Check for NaN values in the target variable and remove them if found\n",
+        "if dataset['Tag_y'].isnull().any():\n",
+        "    print(\"NaN values found in target variable 'Tag_y', removing rows...\")\n",
+        "    dataset = dataset.dropna(subset=['Tag_y'])\n",
+        "\n",
+        "# Dropping unnecessary columns\n",
+        "features_to_drop = ['Tag_y', 'Tag_x', 'filename', 'cryptographic_usage_encryption_algorithms',\n",
+        "                    'complexity_metrics_function_count', 'data_flow_collections_usage', 'hardcoded_urls',\n",
+        "                    'obfuscation_techniques_variable_name_length', 'unique_suspicious_strings']\n",
+        "X_data = dataset.drop(columns=features_to_drop)\n",
+        "y_train = dataset['Tag_y'].values  # Assuming y_train corresponds to the rows in the CSV\n",
+        "\n",
+        "# Convert the filtered CSV data into images\n",
+        "X_train = csv_to_image_array(X_data, dtype='uint8', img_dim=(128, 128), img_type='RGB')\n",
+        "\n",
+        "# Optionally, verify the shapes\n",
+        "print(\"X_train shape:\", X_train.shape)\n",
+        "print(\"y_train shape:\", y_train.shape)\n"
+      ],
+      "metadata": {
+        "id": "sQzTC_9a8BRD",
+        "outputId": "9727affc-8b98-44fc-97cc-b2763fe28591",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-12-7e4a8d12f041>:15: RuntimeWarning: invalid value encountered in cast\n",
+            "  image = Image.fromarray(pixels.astype(np.uint8))\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "X_train shape: (12012, 128, 128, 3)\n",
+            "y_train shape: (12012,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.utils import to_categorical\n",
+        "\n",
+        "# Function to resize images to a new size using TensorFlow\n",
+        "def resize_images(images, new_size=(224, 224)):\n",
+        "    # Ensure images are a tensor before resizing\n",
+        "    images_tensor = tf.convert_to_tensor(images, dtype=tf.float32)\n",
+        "    return tf.image.resize(images_tensor, new_size)\n",
+        "\n",
+        "# Resize X_train to (224, 224)\n",
+        "X_train_resized = resize_images(X_train)\n",
+        "\n",
+        "# Convert y_train to categorical\n",
+        "y_train_categorical = to_categorical(y_train)\n",
+        "\n",
+        "# Print shapes to verify everything is as expected\n",
+        "print(\"Resized X_train shape:\", X_train_resized.shape)\n",
+        "print(\"Categorical y_train shape:\", y_train_categorical.shape)\n"
+      ],
+      "metadata": {
+        "id": "ziJVsApFGY9R",
+        "outputId": "7ee093c8-3a6d-4e13-f21b-d0d496994424",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Resized X_train shape: (9609, 224, 224, 3)\n",
+            "Categorical y_train shape: (9609, 2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
       "metadata": {
         "id": "dIVoMKstltk7"
       },
       "outputs": [],
       "source": [
-        "X_train, X_t, y_train, y_t = train_test_split(X_images, y_categorical, test_size=0.2, random_state=42)\n",
+        "X_train, X_t, y_train, y_t = train_test_split(X_train, y_train, test_size=0.2, random_state=42)\n",
         "X_val, X_test, y_val, y_test = train_test_split(X_t, y_t, test_size=0.3, random_state=42)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "uN5rDyCzLfxs"
+        "id": "uN5rDyCzLfxs",
+        "outputId": "85e97f3b-3380-4d83-ef90-50337bf22a40",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 369
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "'size' must be a 1-D Tensor of 2 elements: new_height, new_width",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-16-b85635a70692>\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mimages_resized\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mX_train_resized\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocess_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mX_val_resized\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocess_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_val\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mX_test_resized\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocess_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-16-b85635a70692>\u001b[0m in \u001b[0;36mpreprocess_images\u001b[0;34m(images)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mpreprocess_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mimages_resized\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m224\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m224\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mimages_resized\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/tensorflow/python/util/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    151\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m       \u001b[0mfiltered_tb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_process_traceback_frames\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__traceback__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 153\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    154\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    155\u001b[0m       \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/tensorflow/python/ops/image_ops_impl.py\u001b[0m in \u001b[0;36m_resize_images_common\u001b[0;34m(images, resizer_fn, size, preserve_aspect_ratio, name, skip_resize_if_same)\u001b[0m\n\u001b[1;32m   1475\u001b[0m       \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\'size\\' must be a 1-D int32 Tensor'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1476\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_shape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_compatible_with\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1477\u001b[0;31m       raise ValueError('\\'size\\' must be a 1-D Tensor of 2 elements: '\n\u001b[0m\u001b[1;32m   1478\u001b[0m                        'new_height, new_width')\n\u001b[1;32m   1479\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: 'size' must be a 1-D Tensor of 2 elements: new_height, new_width"
+          ]
+        }
+      ],
       "source": [
         "import tensorflow as tf\n",
         "\n",
         "def preprocess_images(images):\n",
-        "    # Resize images from (11, 11, 1) to (224, 224, 1)\n",
-        "    images_resized = tf.image.resize(images, [224, 224])\n",
+        "    images_resized = tf.image.resize(images, [224, 224, 3])\n",
+        "    return images_resized\n",
         "\n",
-        "    # Convert grayscale images to RGB by repeating the channels\n",
-        "    images_rgb = tf.image.grayscale_to_rgb(images_resized)\n",
-        "    return images_rgb\n",
-        "\n",
-        "# Apply preprocessing to training and testing datasets\n",
         "X_train_resized = preprocess_images(X_train)\n",
         "X_val_resized = preprocess_images(X_val)\n",
-        "X_test_resized = preprocess_images(X_test)\n"
+        "X_test_resized = preprocess_images(X_test)"
       ]
     },
     {
@@ -547,7 +695,6 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "L4",
-      "machine_shape": "hm",
       "provenance": [],
       "include_colab_link": true
     },
