Added genetic search and grid search

--- a/DL_CNN.ipynb
+++ b/DL_CNN.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "qO6JYp0PLfxr"
       },
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "kGbyb2FcNvvd"
       },
@@ -191,7 +191,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +240,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "dIVoMKstltk7",
         "outputId": "a315ce22-17a5-4450-b9b9-1dd983ca0d26",
@@ -317,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "2FJiONFpLfxs"
       },
@@ -719,13 +719,96 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "GRID SEARCH FOR HYPERPARAMETER TUNING"
+      ],
+      "metadata": {
+        "id": "HRIEaarLtAEm"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "qy-UyGE_Lfxu"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.applications import ResNet50, VGG19\n",
+        "from tensorflow.keras.layers import GlobalAveragePooling2D, Dropout, Dense, Concatenate, Input\n",
+        "from tensorflow.keras.models import Model\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from itertools import product\n",
+        "import numpy as np\n",
+        "\n",
+        "# Hyperparameter grid\n",
+        "learning_rates = [1e-3, 1e-4]\n",
+        "dense_1_units = [256, 512]\n",
+        "dropout_1_rates = [0.2, 0.3]\n",
+        "dense_2_units = [128, 256]\n",
+        "dropout_2_rates = [0.2, 0.3]\n",
+        "\n",
+        "# Input shape\n",
+        "input_shape = (224, 224, 3)\n",
+        "\n",
+        "# Grid Search Loop\n",
+        "best_model = None\n",
+        "best_val_accuracy = 0\n",
+        "best_params = {}\n",
+        "\n",
+        "# Dummy data for demonstration\n",
+        "x_train = np.random.rand(100, 224, 224, 3)\n",
+        "y_train = np.random.randint(0, 2, size=(100, 2))\n",
+        "x_val = np.random.rand(20, 224, 224, 3)\n",
+        "y_val = np.random.randint(0, 2, size=(20, 2))\n",
+        "\n",
+        "for lr, d1_units, d1_drop, d2_units, d2_drop in product(learning_rates, dense_1_units, dropout_1_rates, dense_2_units, dropout_2_rates):\n",
+        "    inputs = Input(shape=input_shape)\n",
+        "    resnet_base = ResNet50(weights='imagenet', include_top=False, input_shape=input_shape, trainable=True)\n",
+        "    vgg_base = VGG19(weights='imagenet', include_top=False, input_shape=input_shape, trainable=True)\n",
+        "\n",
+        "    resnet_features = GlobalAveragePooling2D()(resnet_base(inputs))\n",
+        "    vgg_features = GlobalAveragePooling2D()(vgg_base(inputs))\n",
+        "\n",
+        "    combined_features = Concatenate()([resnet_features, vgg_features])\n",
+        "\n",
+        "    x = Dense(d1_units, activation='relu')(combined_features)\n",
+        "    x = Dropout(d1_drop)(x)\n",
+        "    x = Dense(d2_units, activation='relu')(x)\n",
+        "    x = Dropout(d2_drop)(x)\n",
+        "    outputs = Dense(2, activation='sigmoid')(x)\n",
+        "\n",
+        "    model = Model(inputs, outputs)\n",
+        "    optimizer = Adam(learning_rate=lr)\n",
+        "    model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+        "\n",
+        "    # Train the model\n",
+        "    history = model.fit(x_train, y_train, validation_data=(x_val, y_val), epochs=5, verbose=0)\n",
+        "\n",
+        "    # Evaluate on validation data\n",
+        "    val_accuracy = max(history.history['val_accuracy'])\n",
+        "    print(f\"Params: lr={lr}, d1_units={d1_units}, d1_drop={d1_drop}, d2_units={d2_units}, d2_drop={d2_drop}, val_acc={val_accuracy:.4f}\")\n",
+        "\n",
+        "    # Save the best model\n",
+        "    if val_accuracy > best_val_accuracy:\n",
+        "        best_val_accuracy = val_accuracy\n",
+        "        best_model = model\n",
+        "        best_params = {'learning_rate': lr, 'dense_1_units': d1_units, 'dropout_1_rate': d1_drop, 'dense_2_units': d2_units, 'dropout_2_rate': d2_drop}\n",
+        "\n",
+        "print(\"Best Validation Accuracy:\", best_val_accuracy)\n",
+        "print(\"Best Hyperparameters:\", best_params)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "GENETIC ALGORITHM"
+      ],
+      "metadata": {
+        "id": "0bcQWAdO1ILc"
+      }
     },
     {
       "cell_type": "code",
@@ -734,7 +817,66 @@
         "id": "wivCSiFxLfxu"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import random\n",
+        "from deap import base, creator, tools, algorithms\n",
+        "\n",
+        "# Fitness function\n",
+        "def evaluate(params):\n",
+        "    lr, d1_units, d1_drop, d2_units, d2_drop = params\n",
+        "\n",
+        "    # Build model\n",
+        "    inputs = Input(shape=input_shape)\n",
+        "    resnet_base = ResNet50(weights='imagenet', include_top=False, input_shape=input_shape, trainable=True)\n",
+        "    vgg_base = VGG19(weights='imagenet', include_top=False, input_shape=input_shape, trainable=True)\n",
+        "\n",
+        "    resnet_features = GlobalAveragePooling2D()(resnet_base(inputs))\n",
+        "    vgg_features = GlobalAveragePooling2D()(vgg_base(inputs))\n",
+        "\n",
+        "    combined_features = Concatenate()([resnet_features, vgg_features])\n",
+        "\n",
+        "    x = Dense(d1_units, activation='relu')(combined_features)\n",
+        "    x = Dropout(d1_drop)(x)\n",
+        "    x = Dense(d2_units, activation='relu')(x)\n",
+        "    x = Dropout(d2_drop)(x)\n",
+        "    outputs = Dense(2, activation='softmax')(x)\n",
+        "\n",
+        "    model = Model(inputs, outputs)\n",
+        "    optimizer = Adam(learning_rate=lr)\n",
+        "    model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+        "\n",
+        "    # Train\n",
+        "    history = model.fit(x_train, y_train, validation_data=(x_val, y_val), epochs=3, verbose=0)\n",
+        "    return max(history.history['val_accuracy']),\n",
+        "\n",
+        "# Genetic Algorithm Setup\n",
+        "creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n",
+        "creator.create(\"Individual\", list, fitness=creator.FitnessMax)\n",
+        "\n",
+        "toolbox = base.Toolbox()\n",
+        "toolbox.register(\"attr_lr\", random.choice, [1e-3, 1e-4])\n",
+        "toolbox.register(\"attr_d1_units\", random.choice, [256, 512])\n",
+        "toolbox.register(\"attr_d1_drop\", random.uniform, 0.2, 0.5)\n",
+        "toolbox.register(\"attr_d2_units\", random.choice, [128, 256])\n",
+        "toolbox.register(\"attr_d2_drop\", random.uniform, 0.2, 0.5)\n",
+        "\n",
+        "toolbox.register(\"individual\", tools.initCycle, creator.Individual,\n",
+        "                 (toolbox.attr_lr, toolbox.attr_d1_units, toolbox.attr_d1_drop, toolbox.attr_d2_units, toolbox.attr_d2_drop), n=1)\n",
+        "toolbox.register(\"population\", tools.initRepeat, list, toolbox.individual)\n",
+        "\n",
+        "toolbox.register(\"mate\", tools.cxBlend, alpha=0.5)\n",
+        "toolbox.register(\"mutate\", tools.mutGaussian, mu=0, sigma=1, indpb=0.2)\n",
+        "toolbox.register(\"select\", tools.selTournament, tournsize=3)\n",
+        "toolbox.register(\"evaluate\", evaluate)\n",
+        "\n",
+        "# Run GA\n",
+        "population = toolbox.population(n=10)\n",
+        "algorithms.eaSimple(population, toolbox, cxpb=0.5, mutpb=0.2, ngen=5, verbose=True)\n",
+        "\n",
+        "# Print best individual\n",
+        "best_individual = tools.selBest(population, 1)[0]\n",
+        "print(\"Best Hyperparameters:\", best_individual)\n"
+      ]
     }
   ],
   "metadata": {
